Add a fiware-servicePath-based example to the matching table file

--- a/flume/conf/matching_table.conf.template
+++ b/flume/conf/matching_table.conf.template
@@ -27,6 +27,8 @@
 # The available "dictionary" of fields is:
 #  - entitydId
 #  - entityType
+#  - servicePath
 
 1|entityId,entityType|Room\.(\d*)Room|rooms
 2|entityId|Car|cars
+3|servicePath|GARDENS|gardens
