[FIX] several comments

--- a/test/acceptance/requirements.txt
+++ b/test/acceptance/requirements.txt
@@ -1,2 +1,2 @@
 lettuce==0.2.19
-git+https://visitor:visitor@pdihub.hi.inet/TDAF/tdaf-lettuce-tools.git@develop#egg=tdaf_lettuce_tools
+git+https://github.com/telefonicaid/lettuce-tools.git#egg=lettuce_tools
