--- a/flume/conf/flume.conf.template
+++ b/flume/conf/flume.conf.template
@@ -17,8 +17,7 @@
 # You should have received a copy of the GNU Affero General Public License along with fiware-connectors. If not, see
 # http://www.gnu.org/licenses/.
 # 
-# For those usages not covered by the GNU Affero General Public License please contact with Francisco Romero
-# frb@tid.es
+# For those usages not covered by the GNU Affero General Public License please contact with iot_support at tid dot es
 
 # Who to run cygnus as. Note that you may need to use root if you want
 # to run cygnus in a privileged port (<1024)
