Add flume-ng-core artifact to the pom.xml

--- a/flume/pom.xml
+++ b/flume/pom.xml
@@ -33,6 +33,11 @@
       <version>1.4.0</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.flume</groupId>
+      <artifactId>flume-ng-node</artifactId>
+      <version>1.4.0</version>
+    </dependency>    
+    <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.2.1</version>
