[FEATURE] test to v1.1

--- a/test/acceptance/.gitignore
+++ b/test/acceptance/.gitignore
@@ -3,6 +3,12 @@
 *.out
 *.pyc
 properties.json
+.idea/
+logs/
 testreport/
 settings/
-selenium-server-standalone*.jar
+old/
+conf/
+script/
+scripts/
+
