Document the TTL=-1

--- a/flume/conf/cygnus.conf.template
+++ b/flume/conf/cygnus.conf.template
@@ -46,7 +46,7 @@ cygnusagent.sources.http-source.handler.notification_target = /notify
 cygnusagent.sources.http-source.handler.default_service = def_serv
 # Default service path (service path semantic depends on the persistence sink)
 cygnusagent.sources.http-source.handler.default_service_path = def_servpath
-# Number of channel re-injection retries before a Flume event is definitely discarded
+# Number of channel re-injection retries before a Flume event is definitely discarded (-1 means infinite retries)
 cygnusagent.sources.http-source.handler.events_ttl = 10
 # Source interceptors, do not change
 cygnusagent.sources.http-source.interceptors = ts de
