One change in parameter description

--- a/flume/conf/cygnus_instance.conf.template
+++ b/flume/conf/cygnus_instance.conf.template
@@ -36,5 +36,5 @@ AGENT_NAME=cygnusagent
 # Name of the logfile located at /var/log/cugnus. It is important to put the extension '.log' in order to the log rotation works properly
 LOGFILE_NAME=cygnus.log
 
-# Administration port. Should be unique per instance
+# Administration port. Must be unique per instance
 ADMIN_PORT=8081
