ADD slf4j-api and slf4j-log4h12 dependencies to the pom.xml

--- a/flume/pom.xml
+++ b/flume/pom.xml
@@ -86,7 +86,17 @@
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
       <version>7.2.0.v20101020</version>
-    </dependency>    
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.10</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.10</version>
+    </dependency>
   </dependencies>
 
   <build>
