--- a/flume/conf/cygnus_instance.conf.template
+++ b/flume/conf/cygnus_instance.conf.template
@@ -38,3 +38,6 @@ LOGFILE_NAME=cygnus.log
 
 # Administration port. Must be unique per instance
 ADMIN_PORT=8081
+
+# Polling interval for the configuration reloading
+POLLING_INTERVAL=30
