--- a/test/acceptance/requirements.txt
+++ b/test/acceptance/requirements.txt
@@ -1,2 +1,6 @@
-lettuce==0.2.19
+lettuce==0.2.20
+requests==2.6.0
+xmltodict==0.9.2
+mysql-python==1.2.5
+fabric==1.10.1
 git+https://github.com/telefonicaid/lettuce-tools.git#egg=lettuce_tools
