--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>es.tid.fiware.orionconnectors</groupId>
+  <groupId>com.telefonica.iot</groupId>
   <artifactId>cygnus</artifactId>
   <version>0.7.1_SNAPSHOT</version>
   <packaging>jar</packaging>
