--- a/resources/hive-basic-client/pom.xml
+++ b/resources/hive-basic-client/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>es.tid.fiware.cosmos</groupId>
+  <groupId>com.telefonica.iot</groupId>
   <artifactId>hive-basic-client</artifactId>
   <version>0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
@@ -47,7 +47,7 @@
         <configuration>
           <archive>
             <manifest>
-              <mainClass>es.tid.fiware.cosmos.hivebasicclient.HiveBasicClient</mainClass>
+              <mainClass>com.telefonica.iot.hivebasicclient.HiveBasicClient</mainClass>
             </manifest>
           </archive>
         </configuration>
@@ -57,7 +57,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>1.2.1</version>
         <configuration>
-          <mainClass>es.tid.fiware.cosmos.hivebasicclient.HiveBasicClient</mainClass>
+          <mainClass>com.telefonica.iot.hivebasicclient.HiveBasicClient</mainClass>
         </configuration>
       </plugin>
     </plugins>
