--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
       <artifactId>jetty-server</artifactId>
       <version>7.2.0.v20101020</version>
     </dependency>
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongodb-driver</artifactId>
+      <version>3.0.0</version>
+    </dependency>
   </dependencies>
 
   <build>
