--- a/conf/grouping_rules.conf.template
+++ b/conf/grouping_rules.conf.template
@@ -1,4 +1,4 @@
-# Copyright 2014 Telefónica Investigación y Desarrollo, S.A.U
+# Copyright 2015 Telefónica Investigación y Desarrollo, S.A.U
 # 
 # This file is part of fiware-cygnus (FI-WARE project).
 # 
@@ -28,6 +28,23 @@
 #  - entityType
 #  - servicePath
 
-1|entityId,entityType|Room\.(\d*)Room|numeric_rooms|rooms
-2|entityId|Car|cars|vehicles
-3|servicePath|GARDENS|gardens|city_indicators
+#{
+#    "grouping_rules": [
+#        {
+#            "id": 1,
+#            "fields": [
+#            ],
+#            "regex": "",
+#            "destination": "",
+#            "fiware_service_path": ""
+#        },
+#        {
+#            "id": 2,
+#            "fields": [
+#            ],
+#            "regex": "",
+#            "destination": "",
+#            "fiware_service_path": ""
+#        }
+#    ]
+#}
