ADD should_hash parameter to all pieces of documentation

--- a/conf/agent.conf.template
+++ b/conf/agent.conf.template
@@ -144,6 +144,8 @@ cygnusagent.sinks.mongo-sink.data_model = collection-per-entity
 cygnusagent.sinks.mongo-sink.db_prefix = sth_
 # prefix pro the MongoDB collections
 cygnusagent.sinks.mongo-sink.collection_prefix = sth_
+# true is collection names are based on a hash, false for human redable collections
+cygnusagent.sinks.mongo-sink.should_hash = false
 
 # ============================================
 # OrionSTHSink configuration
@@ -163,6 +165,8 @@ cygnusagent.sinks.sth-sink.data_model = collection-per-entity
 cygnusagent.sinks.sth-sink.db_prefix = sth_
 # prefix for the MongoDB collections
 cygnusagent.sinks.sth-sink.collection_prefix = sth_
+# true is collection names are based on a hash, false for human redable collections
+cygnusagent.sinks.mongo-sink.should_hash = false
 
 #=============================================
 # hdfs-channel configuration
