--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.telefonica.iot</groupId>
   <artifactId>cygnus</artifactId>
-  <version>0.8.0_SNAPSHOT</version>
+  <version>0.8.1</version>
   <packaging>jar</packaging>
 
   <name>cygnus</name>
