--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.telefonica.iot</groupId>
   <artifactId>cygnus</artifactId>
-  <version>0.8.1-SNAPSHOT</version>
+  <version>0.8.1_SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>cygnus</name>
