--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
       <artifactId>mongodb-driver</artifactId>
       <version>3.0.0</version>
     </dependency>
+    <dependency>
+        <groupId>org.apache.kafka</groupId>
+        <artifactId>kafka-clients</artifactId>
+        <version>0.8.2.0</version>
+	</dependency>
   </dependencies>
 
   <build>
