--- a/conf/agent.conf.template
+++ b/conf/agent.conf.template
@@ -171,9 +171,11 @@ cygnusagent.sinks.kafka-sink.type = com.telefonica.iot.cygnus.sinks.OrionKafkaSi
 # channel name from where to read notification events
 cygnusagent.sinks.kafka-sink.channel = kafka-channel
 # select the Kafka topic type between topic-by-service, topic-by-service-path and topic-by-destination
-cygnusagent.sinks.kafka-sink.topic_type = topic-by-service
+cygnusagent.sinks.kafka-sink.topic_type = topic-by-destination
 # comma-separated list of Kafka brokers (a broker is defined as host:port)
 cygnusagent.sinks.kafka-sink.broker_list = x1.y1.z1.w1:port1,x2.y2.z2.w2:port2,...
+# Zookeeper endpoint needed to create Kafka topics, in the form of host:port
+cygnusagent.sinks.kafka-sink.zookeeper_endpoint = x.y.z.w:port
 
 #=============================================
 # hdfs-channel configuration
