--- a/resources/hiveclients/java/hiveserver2-client/pom.xml
+++ b/resources/hiveclients/java/hiveserver2-client/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.telefonica.iot</groupId>
-  <artifactId>hive-basic-client</artifactId>
-  <version>0.1-SNAPSHOT</version>
+  <artifactId>hiveserver2-client</artifactId>
+  <version>0.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>hive-basic-client</name>
+  <name>hiveserver2-client</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -23,12 +23,12 @@
     <dependency>
       <groupId>org.apache.hive</groupId>
       <artifactId>hive-exec</artifactId>
-      <version>0.12.0</version>
+      <version>0.13.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hive</groupId>
       <artifactId>hive-jdbc</artifactId>
-      <version>0.12.0</version>
+      <version>0.13.0</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -47,7 +47,7 @@
         <configuration>
           <archive>
             <manifest>
-              <mainClass>com.telefonica.iot.hivebasicclient.HiveBasicClient</mainClass>
+              <mainClass>com.telefonica.iot.cygnus.resources.hiveclients.hiveserver2client</mainClass>
             </manifest>
           </archive>
         </configuration>
@@ -57,7 +57,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>1.2.1</version>
         <configuration>
-          <mainClass>com.telefonica.iot.hivebasicclient.HiveBasicClient</mainClass>
+          <mainClass>com.telefonica.iot.cygnus.resources.hiveclients.hiveserver2client.HiveServer2Client</mainClass>
         </configuration>
       </plugin>
     </plugins>
