--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,11 @@
       <artifactId>kafka_2.11</artifactId>
       <version>0.8.2.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-test</artifactId>
+      <version>2.8.0</version>
+    </dependency>
   </dependencies>
 
   <build>
