--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
       <artifactId>hadoop-core</artifactId>
       <version>0.20.0</version>
     </dependency>
+    <!--dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-client</artifactId>
+        <version>0.20.2-cdh3u6</version>
+    </dependency-->
     <dependency>
       <groupId>org.apache.hive</groupId>
       <artifactId>hive-exec</artifactId>
