--- a/pom.xml
+++ b/pom.xml
@@ -67,16 +67,16 @@
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
-    <dependency>
+    <!--dependency>
       <groupId>com.facebook.hadoop</groupId>
       <artifactId>hadoop-core</artifactId>
       <version>0.20.0</version>
-    </dependency>
-    <!--dependency>
-        <groupId>org.apache.hadoop</groupId>
-        <artifactId>hadoop-client</artifactId>
-        <version>0.20.2-cdh3u6</version>
     </dependency-->
+    <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-core</artifactId>
+        <version>0.20.2-cdh3u6</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.hive</groupId>
       <artifactId>hive-exec</artifactId>
