ADD documentation on the batch mechanism in HDFS

--- a/conf/agent.conf.template
+++ b/conf/agent.conf.template
@@ -81,6 +81,8 @@ cygnusagent.sinks.hdfs-sink.hdfs_password = xxxxxxxx
 cygnusagent.sinks.hdfs-sink.oauth2_token = xxxxxxxx
 # how the attributes are stored, available formats are json-row, json-column, csv-row and csv-column
 cygnusagent.sinks.hdfs-sink.file_format = json-column
+# number of notifications to be included within a processing batch
+cygnusagent.sinks.hdfs-sink.batch_size = 100
 # Hive server version (1 or 2)
 cygnusagent.sinks.hdfs-sink.hive_server_version = 2
 # Hive FQDN/IP address of the Hive server
