--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
     <dependency>
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-core</artifactId>
-        <version>0.20.2-cdh3u6</version>
+        <version>1.2.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hive</groupId>
