Add parameters to configuration template

--- a/conf/agent.conf.template
+++ b/conf/agent.conf.template
@@ -170,6 +170,8 @@ cygnusagent.sinks.postgresql-sink.enable_grouping = false
 cygnusagent.sinks.postgresql-sink.postgresql_host = x.y.z.w
 # the port where the PostgreSQL server listens for incomming connections
 cygnusagent.sinks.postgresql-sink.postgresql_port = 5432
+# the name of the postgresql database
+cygnusagent.sinks.postgresql-sink.postgresql_database = postgres
 # a valid user in the PostgreSQL server
 cygnusagent.sinks.postgresql-sink.postgresql_username = root
 # password for the user above
@@ -177,7 +179,7 @@ cygnusagent.sinks.postgresql-sink.postgresql_password = xxxxxxxxxxxxx
 # how the attributes are stored, either per row either per column (row, column)
 cygnusagent.sinks.postgresql-sink.attr_persistence = column
 # select the table type
-cygnusagent.sinks.postgresql-sink.table_type = data-model
+cygnusagent.sinks.postgresql-sink.data_model = by-service-path
 # number of notifications to be included within a processing batch
 cygnusagent.sinks.postgresql-sink.batch_size = 100
 # timeout for batch accumulation
